# ai-env

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  NOTION_SETUP.md  README.md  SERVICES.md  SETUP.md  pyproject.toml
.antigravity/: config.json
.claude/: README.md  project-profile.yaml  skills
.claude/commands/: add-mcp.md  ai-env-sync.md  cleanup-branches.md  commit.md  fix-github-issue.md  git-summary.md  handoff.md  import-ai-config.md  rename-files.md  review.md  setup.md  sync.md  token-rotate.md  upgrade-ai-tools.md  wf-code.md  wf-research.md  wf-review.md  wf-run.md  wf-spec.md  workflow.md
.claude/global/: CLAUDE.md  settings.json.template
.claude/hooks/: cmux_notify.sh  pre_compact.sh  security_guard.sh  session_end.sh  session_start.sh
.codex/: README.md
.gemini/: README.md
.github/workflows/: ci.yml
config/: mcp_servers.yaml  settings.yaml
config/github/: profiles.json
config/topics/: README.md
docs/: USAGE-EXAMPLES.md
scripts/: convert_notion_to_obsidian.sh  doc_sync_check.py  migrate_obsidian_vault.py  migrate_obsidian_vault.sh  notion_to_obsidian.sh  test_mcp_servers.sh
specs/: CHANGELOG.md  README.md  SPEC-001-core-architecture.md  SPEC-002-mcp-generator.md  SPEC-003-sync-and-skills.md  SPEC-004-cli-interface.md  SPEC-005-agent-fallback.md  SPEC-006-codex-integration.md  SPEC-007-doctor-health-check.md  SPEC-008-deep-research-dispatch.md  SPEC-009-unified-workflow-skills.md  SPEC-010-efficiency-improvements.md  SPEC-011-coding-efficiency-infra.md  SPEC-012-skill-deduplication.md
src/ai_assistant/: __init__.py
src/ai_env/: __init__.py  cli.py
tests/: conftest.py  test_ai_env.py  test_mcp_target_matrix.py  test_notion_to_obsidian.py  test_sync.py
tests/cli/: test_cli.py
tests/core/: test_codex_skills.py  test_doctor.py  test_env_example.py  test_pipeline.py  test_project_sync.py  test_research.py  (+3 more)
(+125 files in other folders)
